--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,8 @@ input:focus, textarea:focus{
   display: block;
   margin: 0px auto;
   text-align: center;
+  font-size: 20px;
+  margin-top: 10px;
 }
 
 
@@ -127,3 +129,4 @@ input:focus, textarea:focus{
   box-shadow: 0 0 20px rgb(230, 197, 65) !important;
 
 }
+
