--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
-html {
-  background: url(img/star-wars-background-3-dark.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
 .container {
   max-width: 1100px;
   margin: auto;
   padding: 0 20px;
 }
+
+.bg-image {
+ background: url(img/star-wars-background-3-dark.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} 
 
 header img {
   margin: auto;
