--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,18 @@
   max-width: 1100px;
   margin: auto;
   padding: 0 20px;
-  background: url(img/star-wars-background-3-dark.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  color: white
+}
+
+
+
+.bg-image{
+  background: url(img/star-wars-background-3-dark.png) no-repeat center; 
+  overflow: hidden;
   background-size: cover;
+  width: 100%;
+  height: 100vh;
+  
 }
 
 header img {
