--- a/src/App.css
+++ b/src/App.css
@@ -2,24 +2,22 @@
   max-width: 1100px;
   margin: auto;
   padding: 0 20px;
-  color: white
+  color: white;
 }
 
-
-
-.bg-image{
-  background: url(img/star-wars-background-3-dark.png) no-repeat center; 
-  overflow: hidden;
+.bg-image {
+  background: url(img/star-wars-background-3-dark.png) no-repeat center;
   background-size: cover;
   width: 100%;
   height: 100vh;
-  
+  overflow: scroll;
 }
 
 header img {
   margin: auto;
   width: 350px;
-  margin-top: 80px;
+  height: auto;
+  margin-top: 30px;
   margin-bottom: 30px;
 }
 
@@ -32,6 +30,7 @@ header img {
 table {
   margin: auto;
   margin-top: 30px;
+
 }
 
 table th,
